# Image-Dehazing-using-ECA-LDNet

./: .gitattributes  .gitignore  CITATION.cff  ECA-LDNet_Report.docx  LICENSE  README.md  ablation_results.csv  eca-ldnet-model-train.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ECA_LDNet_each_stage_results/stage1/version_1_22_epoch_stage1/: __notebook_source__.ipynb  stage1_history.csv
ECA_LDNet_each_stage_results/stage1/version_2_22_to_35_epoch_stage1/: __notebook_source__.ipynb  stage1_history.csv
ECA_LDNet_each_stage_results/stage1/version_3_stage_1_complete/: __notebook_source__.ipynb  stage1_history.csv
ECA_LDNet_each_stage_results/stage2/: eca-ldnet-model-train.ipynb
ECA_LDNet_each_stage_results/stage4/version_2/: stage4_history.csv  upgrade-stage-4-train (1).ipynb
ECA_LDNet_each_stage_results/stage4/verson_1/: stage4_history.csv
ECA_LDNet_each_stage_results/stage5/: stage5_history.csv
checkpoints/: README.md
eca_ldnet/: __init__.py  blocks.py  callbacks.py  config.py  data.py  evaluate.py  inference.py  layers.py  losses.py  metrics.py  model.py  train.py
notebooks/: 01_train_full_pipeline.ipynb  03_test_eca_ldnet.ipynb  04_test_final_model.ipynb
results/: model_architecture_summary.txt
results/each_stage_results/stage2/: eca-ldnet-model-train.ipynb  (+1 more)
results/final_evaluation/: final_report.txt
scripts/: count_macs.py  eval_realhaze.py  run_ablation.py  run_ablation_v2.py
test_python_files/: test-eca-dnet.ipynb  test_final_model_from_stage.ipynb
tests/: conftest.py  test_ablation.py  test_losses.py  test_model.py
(+7 files in other folders)
